--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Guess Number</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css" />    
+    <script src="script.js"></script>
   </head>
   <body>
     <form>
@@ -13,31 +14,5 @@
       <input id="n" type="number" placeholder="try your luck" />
       <input id="btn" type="button" value="Guess" onclick="guess()" />
     </form>
-    <script>
-      // producing random number from 1-10
-      var r = Math.floor(Math.random() * 10 + 1);
-
-      // counter for tries
-      var counter = 1;
-      function guess() {
-        // getting input value from id-'n'
-        var num = document.getElementById("n").value;
-
-        if (num == "" || num < 0 || num > 10) {
-          alert("please enter only number lies between 1-10");
-        } else {
-          if (num == r) {
-            alert("Congratulation, You won after " + counter + " guess");
-            document.getElementById("n").value = "";
-          } else if (num < r) {
-            alert("try greater number");
-          } else {
-            alert("try smaller number");
-          }
-        }
-        // counter increment after button click
-        counter += 1;
-      }
-    </script>
-  </body>
+   </body>
 </html>
